Fix alignment.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -20,9 +20,9 @@ a:hover,a:focus {
 }
 
 .oneline {
-  vertical-align: top;
+  vertical-align: middle;
 }
 
-.twitter-share-button[style] { vertical-align: top !important; }
+.twitter-share-button[style] { vertical-align: middle !important; }
 
 
